# Local-Encoder

./: .env.example  .gitignore  CONTRIBUTING.md  GAPS.md  LICENSE  README.md  avideo-local-encoder.spec  local-encoder.spec  main.py  pyproject.toml
.github/workflows/: ci.yml
avideo_local_encoder/: __init__.py  _frozen.py  avideo_client.py  cli.py  config.py  downloader.py  encoder.py  progress.py  server.py  utils.py
avideo_local_encoder/static/: index.html
local_encoder/: _frozen.py  avideo_client.py  cli.py  config.py  downloader.py  encoder.py  history.py  logging_setup.py  progress.py  server.py  utils.py
local_encoder/static/: index.html
scripts/: download_vendor.py
tests/: test_avideo_client.py  test_config.py  test_downloader.py  test_encoder.py  test_progress.py  test_server.py  test_utils.py
