[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-encoder"
version = "0.1.0"
description = "CLI tool to download, encode, and upload videos to an AVideo server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9",
    "httpx>=0.27",
    "yt-dlp>=2024.1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
local-encoder = "local_encoder.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["local_encoder"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP017"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["local_encoder"]
omit = ["local_encoder/_frozen.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
